--- a/public/styles/home.scss
+++ b/public/styles/home.scss
@@ -377,7 +377,7 @@
             margin-top: 10px;
         }
 
-        @media (max-width: 500px) {
+        @media (max-width: 667px) {
             padding: 0 10px 10px 10px;
         }
 
@@ -419,7 +419,7 @@
                 overflow: hidden;
             }
 
-            @media (max-width: 500px) {
+            @media (max-width: 667px) {
 
                 &:nth-child(2n+1), &:nth-child(2n), &:nth-child(1) {
                     margin-left: 0;
@@ -680,6 +680,10 @@
                 @media (max-width: 667px) {
                     background-image: none;
                 }
+
+                .line::before {
+                    background-image: linear-gradient(rgba(255,255,255,0), $deep_sky_blue);
+                }
             }
 
             &.keep_it_clean_plan {
@@ -689,6 +693,10 @@
                 background-size: 300px;
                 @media (max-width: 667px) {
                     background-image: none;
+                }
+
+                .line::before {
+                    background-image: linear-gradient(rgba(255,255,255,0), $keepitclean_background);
                 }
             }
 
@@ -700,15 +708,24 @@
                 @media (max-width: 667px) {
                     background-image: none;
                 }
+
+                .line::before {
+                    background-image: linear-gradient(rgba(255,255,255,0), $hacktivist_community_background);
+                }
             }
 
             &.thirty_four_island_project {
                 background-image: url('../imgs/img_partner_ldiindonesia.png');
                 background-repeat: no-repeat;
                 background-position: right -50px bottom 0px;
+                background-position: right -50px bottom 0px;
                 background-size: 300px;
                 @media (max-width: 667px) {
                     background-image: none;
+                }
+
+                .line::before {
+                    background-image: linear-gradient(rgba(255,255,255,0), $thirtyfourislandproject_background);
                 }
             }
 
@@ -719,6 +736,10 @@
                 background-size: 300px;
                 @media (max-width: 667px) {
                     background-image: none;
+                }
+
+                .line::before {
+                    background-image: linear-gradient(rgba(255,255,255,0), $eestijazziarengusuunad_background);
                 }
             }
 
@@ -777,7 +798,7 @@
                 }
             }
 
-            @media (max-width: 500px) {
+            @media (max-width: 667px) {
                 width: 100%;
                 padding-right: 0;
             }
@@ -797,7 +818,7 @@
             padding-right: 50px;
             padding-left: 50px;
             border-radius: 4px;
-            @media (max-width: 500px) {
+            @media (max-width: 667px) {
                 margin-top: 0;
             }
         }
